# asn1c-issue-433

./: .gitmodules  CMakeLists.txt  README.md  build_and_run.sh  build_asn1c_versions.sh
proto/: CMakeLists.txt  cpm.asn
src/: helper.h  main.c
